# innative

./: .clang-format  .dockerignore  .gitattributes  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  CODE-OF-CONDUCT.md  CONTRIBUTING.md  DetermineTargetArchitecture.cmake  Dockerfile  Makefile  README.md  SECURITY.md  appveyor.yml  base.mk  build-lld.ps1  build-lld.sh  build-llvm.ps1  build-llvm.sh  default.nix  flake.nix  format.sh  get-cmake.ps1  innative-cmd.mk  innative-env.mk  innative-test.mk  innative.mk  innative.sln  innativeConfig.cmake.in  llvm.nix  makefile  native-wasm.sln  org.freedesktop.Sdk.Extension.innative.yml  pack-llvm.ps1  pack-llvm.sh  pack.ps1  shell.nix  test-debug.cpp  travis.sh  (+5 more)
flatpak/: build-flatpak-bundle.sh  org.freedesktop.Sdk.Extension.innative.yml
include/innative/: errors.h  export.h  flags.h  innative.h  khash.h  module.h  opcodes.h  path.h  schema.h  sourcemap.h
include/native-wasm/: export.h  khash.h  native-wasm.h  schema.h
innative/: CMakeLists.txt  DWARFParser.cpp  DWARFParser.h  LLVMIsHell.natvis  LLVMVis.natvis  Makefile  atomic_instruction_details.h  atomic_instructions.cpp  atomic_instructions.h  compile.cpp  compile.h  constants.cpp  constants.h  debug.cpp  debug.h  debug_dwarf.cpp  debug_dwarf.h  debug_pdb.cpp  debug_pdb.h  debug_sourcemap.cpp  debug_sourcemap.h  debug_wat.cpp  debug_wat.h  default.nix  dump_symbols.cpp  dump_symbols.h  dwarf_parser.cpp  dwarf_parser.h  dwarfsourcemap.cpp  export.cpp  filesys.h  innative.rc  innative.vcxproj  innative.vcxproj.filters  instructions.cpp  intrinsic.cpp  intrinsic.h  jit.cpp  jit.h  lexer.cpp  (+34 more)
innative-assemblyscript/: CMakeLists.txt  Makefile  assemblyscript.c  innative-assemblyscript.vcxproj  innative-assemblyscript.vcxproj.filters
innative-cmd/: CMakeLists.txt  Makefile  default.nix  innative-cmd.rc  innative-cmd.vcxproj  innative-cmd.vcxproj.filters  main.cpp
innative-env/: CMakeLists.txt  Makefile  atomics.c  atomics.h  chkstk.amd64.asm  chkstk.x86.asm  default.nix  ftol.x86.asm  innative-env.def  innative-env.vcxproj  innative-env.vcxproj.filters  internal.c  internal.h  memcmp.amd64.asm  memcpy.amd64.asm  memcpy.x86.asm  memmove.x86.asm  memset.amd64.asm  memset.x86.asm  wait_list.c  wait_list.h  wait_list.natvis  win32_x86.c
innative-loader/: CMakeLists.txt  innative-loader.rc  innative-loader.vcxproj  innative-loader.vcxproj.filters  loader.c
innative-runtime-setup/: Product.wxs  en-us.wxl  innative-runtime-setup.wixproj
innative-sdk-setup/: Product.wxs  en-us.wxl  harvest-h-files.xslt  harvest-wasm-files.xslt  innative-sdk-setup.wixproj
innative-setup/: LICENSE.rtf  Product.wxs  harvest-wasm-files.xslt  innative-setup.wixproj
innative-stub/: CMakeLists.txt  Makefile  default.nix  innative-stub.vcxproj  innative-stub.vcxproj.filters  stub.c
innative-test/: CMakeLists.txt  Makefile  benchmark.cpp  benchmark.h  benchmark_debug.cpp  benchmark_fac.cpp  benchmark_fannkuch-redux.cpp  benchmark_fib.cpp  benchmark_minimum.cpp  benchmark_n-body.cpp  benchmark_vectorloop.cpp  constparse.c  debugging.cpp  default.nix  depend.c  funcreplace.c  innative-test.rc  innative-test.vcxproj  innative-test.vcxproj.filters  test.cpp  test.h  test_allocator.cpp  test_assemblyscript.cpp  test_atomic_waitnotify.cpp  test_debug.cpp  test_embedding.cpp  test_environment.cpp  test_errors.cpp  test_funcreplace.cpp  test_harness.cpp  test_jit.cpp  test_malloc.cpp  test_manual.cpp  test_parallel_parsing.cpp  test_path.cpp  test_queue.cpp  test_serializer.cpp  test_stack.cpp  test_stream.cpp  test_util.cpp  (+3 more)
innative-test-embedding/: CMakeLists.txt  Makefile  default.nix  embedding.c  innative-test-embedding.vcxproj  innative-test-embedding.vcxproj.filters
innative-wasi/: CMakeLists.txt  wasi.c
loader/: loader.c  loader.rc  loader.vcxproj  loader.vcxproj.filters
native-wasm/: compile.cpp  compile.h  export.cpp  greedy.h  intrinsic.cpp  intrinsic.h  native-wasm.rc  native-wasm.vcxproj  native-wasm.vcxproj.filters  optimize.cpp  optimize.h  parse.cpp  parse.h  path.h  queue.h  stack.h  stream.h  tools.cpp  tools.h  trex.c  trex.h  util.cpp  util.h  validate.cpp  validate.h  wast.cpp  wast.h  wat.cpp  wat.h
native-wasm-cmd/: main.cpp  native-wasm-cmd.vcxproj
native-wasm-env/: internal.c  native-wasm-env.vcxproj  native-wasm-env.vcxproj.filters
native-wasm-test/: native-wasm-test.vcxproj  test.cpp  wast.lib
runtime-stub/: runtime-stub.vcxproj  stub.c
scripts/: assemblys.wasm.map  assemblyscript.wasm  benchmark-fac.wat  benchmark_debug.wasm  benchmark_fac.wasm  benchmark_fannkuch-redux.wasm  benchmark_fib.wasm  benchmark_fib.wat  benchmark_minimum.wasm  benchmark_n-body.wasm  broken_module.wasm  constparse.natvis  constparse.wasm  constparse.wat  debugging.cpp  debugging.wasm  depend.wasm  embedded.wat  funcreplace.wasm  libc-test.wat  no-op-test.wat  test-call-graph.wat  test-h.wat  test-helper-functions.wast  test-libc.wat  test-posix.wat  test-win32.wat  test-win64-cref.wat  test-win64-gui.wat  test-win64.wat  test.wat  wasm_malloc.c
